fixed the Makefile of examples to compile smtp2 and example_journal[1-3]

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@ OCAMLOPT=ocamlfind ocamlopt -thread -package session-ocaml,session-ocaml.ppx -re
 OCAMLMKTOP=ocamlfind ocamlmktop -thread -package session-ocaml -rectypes
 OCAMLDEP=ocamlfind ocamldep -package session-ocaml
 
-EXAMPLES=smtp2 example_journal1 example_journal2
+EXAMPLES=smtp2 example_journal1 example_journal2 example_journal3
 
 EXAMPLES_BYTE = $(EXAMPLES:%=%.byte)
 EXAMPLES_NATIVE = $(EXAMPLES:%=%.native)
@@ -13,6 +13,16 @@ all: $(EXAMPLES_BYTE) $(EXAMPLES_NATIVE)
 
 # Common rules
 .SUFFIXES: .ml .mli .cmo .cmi .cmx .byte .native
+
+example_journal3.byte: example_journal2.cmo example_journal3.cmo
+	$(OCAMLC) -package session-ocaml.net -linkpkg -o $@ $^
+
+example_journal3.native: example_journal2.cmx example_journal3.cmx
+	$(OCAMLOPT) -package session-ocaml.net -linkpkg -o $@ $^
+
+example_journal3.cmo: example_journal2.cmo
+
+example_journal3.cmx: example_journal2.cmx
 
 .cmo.byte:
 	$(OCAMLC) -package session-ocaml.net -linkpkg -o $@ $^
